# rpi_pico_related

./: README
pico2_dsp_skeleton/: CMakeLists.txt  README.md  dsp_common.c  dsp_common.h  dsp_detect.c  dsp_fft.c  dsp_fft_filter.c  dsp_fir.c  dsp_iir.c  dsp_make_sine.c  dsp_mult.c  dsp_none.c  fft_filter_coeffs.h  fir_coeffs.h  gen_fir_firwin.py  gen_fir_firwin2.py  gen_iir.py  generate_fir.py  i2s.pio  iir_coeffs.h  install_pico_sdk.txt  main.c  scratch_check_h.py  scratch_gen_fir.py  spec.txt
